RESOLVED FIXED 187072
Find on page selection color isn't adapted for dark mode
https://bugs.webkit.org/show_bug.cgi?id=187072
Summary Find on page selection color isn't adapted for dark mode
Timothy Hatcher
Reported 2018-06-26 17:13:22 PDT
White text on a yellow background is hard to read. <rdar://problem/40354841>
Attachments
Patch (16.64 KB, patch)
2018-06-26 17:35 PDT, Timothy Hatcher
no flags
Patch (16.74 KB, patch)
2018-06-26 18:33 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.41 MB, application/zip)
2018-06-26 19:41 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-sierra (3.19 MB, application/zip)
2018-06-26 20:16 PDT, EWS Watchlist
no flags
Patch (17.89 KB, patch)
2018-06-26 20:40 PDT, Timothy Hatcher
no flags
Patch (17.89 KB, patch)
2018-06-26 21:21 PDT, Timothy Hatcher
no flags
Patch (18.29 KB, patch)
2018-06-27 09:10 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from webkit-cq-03 for mac-sierra (2.35 MB, application/zip)
2018-06-27 11:02 PDT, WebKit Commit Bot
no flags
Patch (19.19 KB, patch)
2018-06-27 11:38 PDT, Timothy Hatcher
no flags
Patch (19.19 KB, patch)
2018-06-27 13:13 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from webkit-cq-01 for mac-sierra (2.36 MB, application/zip)
2018-06-27 14:21 PDT, WebKit Commit Bot
no flags
Patch (22.12 KB, patch)
2018-06-27 14:33 PDT, Timothy Hatcher
no flags
Patch (2.06 KB, patch)
2018-06-28 10:56 PDT, Timothy Hatcher
no flags
Patch (3.36 KB, patch)
2018-06-28 11:09 PDT, Timothy Hatcher
no flags
Patch (4.29 KB, patch)
2018-06-28 11:55 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from ews103 for mac-sierra (2.41 MB, application/zip)
2018-06-28 13:03 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews115 for mac-sierra (3.44 MB, application/zip)
2018-06-28 13:59 PDT, EWS Watchlist
no flags
Patch (5.31 KB, patch)
2018-06-28 14:08 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-06-26 17:35:18 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 2 2018-06-26 18:33:22 PDT Comment hidden (obsolete)
Tim Horton
Comment 3 2018-06-26 19:09:52 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2018-06-26 19:41:23 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2018-06-26 19:41:25 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 6 2018-06-26 20:16:26 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 7 2018-06-26 20:16:28 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 8 2018-06-26 20:40:14 PDT Comment hidden (obsolete)
Tim Horton
Comment 9 2018-06-26 21:04:35 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 10 2018-06-26 21:16:39 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 11 2018-06-26 21:21:34 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 12 2018-06-26 21:37:33 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 13 2018-06-27 08:54:16 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 14 2018-06-27 09:10:19 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 15 2018-06-27 11:02:46 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 16 2018-06-27 11:02:48 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 17 2018-06-27 11:38:46 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 18 2018-06-27 13:13:56 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 19 2018-06-27 14:21:32 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 20 2018-06-27 14:21:34 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 21 2018-06-27 14:33:26 PDT
WebKit Commit Bot
Comment 22 2018-06-27 15:14:17 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 23 2018-06-27 15:15:01 PDT
Comment on attachment 343753 [details] Patch Clearing flags on attachment: 343753 Committed r233280: <https://trac.webkit.org/changeset/233280>
WebKit Commit Bot
Comment 24 2018-06-27 15:15:03 PDT Comment hidden (obsolete)
Truitt Savell
Comment 25 2018-06-28 08:24:50 PDT Comment hidden (obsolete)
Ryan Haddad
Comment 26 2018-06-28 09:23:00 PDT Comment hidden (obsolete)
Tim Horton
Comment 27 2018-06-28 09:24:58 PDT
On 10.12 it *is* still yellow, and just needs a rebaseline there, probably?
Ryan Haddad
Comment 28 2018-06-28 09:29:04 PDT
(In reply to Tim Horton from comment #27) > On 10.12 it *is* still yellow, and just needs a rebaseline there, probably? It is also still yellow on 10.13 and 10.14 when dark mode isn't enabled, right?
Tim Horton
Comment 29 2018-06-28 09:35:13 PDT
No, now it uses findHighlightColor, which is likely not precisely the same color.
Timothy Hatcher
Comment 30 2018-06-28 10:47:11 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 31 2018-06-28 10:53:35 PDT
(In reply to Ryan Haddad from comment #28) > (In reply to Tim Horton from comment #27) > > On 10.12 it *is* still yellow, and just needs a rebaseline there, probably? > It is also still yellow on 10.13 and 10.14 when dark mode isn't enabled, > right? Yes, it is the same color in light and dark modes.
Timothy Hatcher
Comment 32 2018-06-28 10:54:10 PDT
Reopening to update layout tests.
Timothy Hatcher
Comment 33 2018-06-28 10:56:24 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 34 2018-06-28 11:09:16 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 35 2018-06-28 11:55:37 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 36 2018-06-28 13:03:51 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 37 2018-06-28 13:03:53 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 38 2018-06-28 13:59:53 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 39 2018-06-28 13:59:55 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 40 2018-06-28 14:08:12 PDT
WebKit Commit Bot
Comment 41 2018-06-28 14:48:52 PDT
Comment on attachment 343848 [details] Patch Clearing flags on attachment: 343848 Committed r233329: <https://trac.webkit.org/changeset/233329>
WebKit Commit Bot
Comment 42 2018-06-28 14:48:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.